# ps2sdk-ports

./: .editorconfig  .gitignore  .gitmodules  COPYING  Dockerfile  Makefile  Makefile.eeglobal  README  README.md  build-cmakelibs.sh  build-external-libs.sh  fetch.sh  lib.status  pcre2-ps2.patch  ps2dev.cmake
.github/workflows/: compilation.yml  docker.yml
aalib/: AUTHORS  Makefile  Makefile.eeglobal  Makefile.pref  README  README.ps2  aastdout.c  config.h
aalib/CVS/: Entries  Repository  Root
aalib/include/: aaint.h  aalib.h  aamktabl.h  aaxint.h
aalib/src/: Makefile  aaedit.c  aafastre.c  aaflush.c  aafont.c  aafonts.c  aahelp.c  aain.c  aalib.c  aamem.c  aamktabl.c  aaout.c  aaparse.c  aaprintf.c  aarec.c  aaregist.c  aarender.c  aasave.c  aasavefont.c  aaslang.c  aaslnkbd.c  aastdin.c  aastdout.c  aatest.c  aavyhen.c  acconfig.h  config.h  font14.c  font16.c  font8.c  font9.c  fontcour.c  fontgl.c  fontline.c  fontx13.c  fontx13b.c  fontx16.c  toc.c
aalib/test/: Makefile  aafire.c
config/: ci-docker-env.ini  repository-dispatch.ini
expat/: Makefile  README.PS2  configure  expat_config.h  libtool
expat/conftools/: config.sub
expat/xmlwf/: readfilemap.c  xmlwf.c
freetype/: README.PS2
freetype-2.4.12/: README.PS2  SetupPS2.sh
freetype-2.9.1/: README.PS2  SetupPS2.sh
freetype/builds/: config.mk
freetype2/: Makefile  README.PS2  SetupPS2.sh  config.mk
hash-library/: Makefile
hash-library/src/: Makefile  crc32.cpp  hash-library.pc  hash-library.pc.in  keccak.cpp  md5.cpp  sha1.cpp  sha256.cpp  sha3.cpp
imgui/: Makefile
imgui/backends/: imgui_impl_ps2gskit.cpp  imgui_impl_ps2gskit.h  imgui_impl_ps2sdk.cpp  imgui_impl_ps2sdk.h
imgui/example_ps2/: .gitignore  Makefile  custom_font.h  gfx.cpp  gfx.h  main.cpp  pad.cpp  pad.h
libconfig/: ChangeLog  Makefile  README.PS2
libconfig-1.3.2/: AUTHORS  ChangeLog  Makefile.PS2  Makefile.am  Makefile.in  README  README.PS2  TODO  ac_config.h.in  aclocal.m4  configure  configure.ac  grammar.c  grammar.h  grammar.y  libconfig++.vcproj  libconfig++_stub.vcproj  libconfig.c  libconfig.h  libconfig.hh  libconfig.sln  libconfig.spec  libconfig.spec.in  libconfig.vcproj  libconfig_stub.vcproj  libconfigcpp.c++  libconfigcpp.cc  private.h  scanner.c  scanner.l  wincompat.h
libconfig-1.3.2/debian/: changelog  control  copyright  libconfig++8-dev.install  libconfig++8.install  libconfig8-dev.install  libconfig8.install  rules  shlibs
libconfig-1.3.2/doc/: Makefile.in  libconfig.info  libconfig.texi
libconfig-1.3.2/samples/: Makefile.am  Makefile.in
libconfig-1.3.2/samples/c/: Makefile.am  Makefile.in  sample1.c  sample2.c  sample3.c  stub.c
libconfig-1.3.2/samples/c++/: Makefile.am  Makefile.in  sample1.cpp  sample2.cpp  sample3.cpp  stubcpp.cpp
libconfig-1.4.5/: Makefile
libconfig-1.4.5/src/: wincompat.h
libconfig/include/: libconfig.h
libconfig/src/: grammar.c  libconfig.c  scanner.c
libid3tag/: Makefile
libjpeg/: Makefile  Rules.make  lib.status  libjpeg-ps2-alignment-fix.patch  libjpeg6b_6b-14.diff  libjpg.c
libjpeg/include/: jconfig.h  jmorecfg.h  jpeglib.h  libjpg.h
libjpeg/lib/: Makefile
libjpeg/src/: Makefile  jchuff.c  jdmarker.c  libjpg.c
libjpeg_ps2_addons/: Makefile
libjpeg_ps2_addons/include/: libjpg_ps2_addons.h
libjpeg_ps2_addons/src/: Makefile  libjpg_ps2_addons.c
libmad/: Makefile
libmikmod/: Makefile  Makefile.eeglobal  Makefile.pref  Makefile.sample  README.PS2  config.h  example.c  music.xm
libmikmod/drivers/: audsrv_irx.s  drv_ps2.c  freesd_irx.s
libmikmod/include/: mikmod_build.h  mikmod_internals.h
libmikmod/mmio/: mmio_ps2.c
libmikmod/playercode/: mdreg.c  sloader.c
libpng/: INSTALL  Makefile  Makefile.eeglobal  README.ps2  example.c  makefile  png.c  pngerror.c  pnggccrd.c  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrtran.c  pngrutil.c  pngset.c  pngtest.c  pngusr.h  pngwrite.c  pngwutil.c
libtiff/: Makefile  README.ps2  tif_aux.c  tif_color.c  tif_config.h  tif_dirinfo.c  tif_getimage.c  tif_luv.c  tif_print.c  tif_ps2.c  tif_read.c  tiffio.h
libyaml/: ReadMe.md  yamlBuildPS2.sh
lua/: Makefile  Makefile.ps2  README.ps2
lua/etc/: Makefile
madplay/: Makefile
madplay/ee/src/: CHANGES  COPYRIGHT  CREDITS  Makefile  Makefile.am  Makefile.in  README  TODO  VERSION  abxtest  abxtest.1  aclocal.m4  audio.c  audio.h  audio_aiff.c  audio_alsa.c  audio_carbon.c  audio_cdda.c  audio_empeg.c  audio_esd.c  audio_hex.c  audio_jaguar.c  audio_nas.c  audio_null.c  audio_oss.c  audio_qnx.c  audio_raw.c  audio_sjpcm.c  audio_snd.c  audio_sun.c  audio_wave.c  audio_win32.c  bstdfile.c  config.h.in  configure  configure.ac  crc.c  crc.h  directory.c  file.c  (+28 more)
madplay/ee/src/include/: audio.h  config.h  crc.h  player.h  resample.h  tagger.h
ode/: Makefile  Makefile.eeglobal
romfs/: Makefile  Makefile.pref  README.ps2  Rules.make  romdisk.imga
sdl/: CHANGELOG  CHANGELOG.ps2  Makefile  Makefile.ps2  build-deps  config.status  libtool  sdl-config  sdl.pc
sdlgfx/: ChangeLog  Makefile  README  README-rpm  README.PS2  SDL_framerate.c  SDL_framerate.h  SDL_gfx.sln  SDL_gfx.spec  SDL_gfx.vcxproj  SDL_gfxBlitFunc.c  SDL_gfxBlitFunc.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h  SDL_gfx_VS2022.vcxproj  SDL_imageFilter.c  SDL_imageFilter.h  SDL_rotozoom.c  SDL_rotozoom.h  configure.in
sdlimage/: IMG.c  IMG_png.c  Makefile
sdlmixer/: Rules.make
sdlmixer/src/smpeg/: .gitignore  BUGS  MPEG.cpp  MPEGaction.h  MPEGaudio.h  MPEGerror.h  MPEGfilter.c  MPEGlist.cpp  MPEGstream.cpp  MPEGsystem.cpp  Makefile.am  configure.in  glmovie-tile.c  glmovie.c  gtv.1  gtv.c  plaympeg.c  smpeg-config.in  smpeg.cpp  smpeg.h  smpeg.m4
sdlmixer/src/smpeg/audio/: MPEGaudio.cpp  mpeglayer3.cpp  mpegtoraw.cpp
sdlmixer/src/smpeg/video/: MPEGvideo.cpp  gdith.cpp  parseblock.cpp  proto.h  readfile.cpp  vhar128.cpp  vhar128.h  video.cpp  video.h
sdlnet/: Makefile  SDLnet.c  SDLnetsys.h
sdlttf/: Makefile  SDL_ttf.c
stlport/: Makefile  README.ps2
ucl/: Makefile  ucl_ptr.h  ucl_util.c
unzip/: Makefile
zlib/: Makefile  Makefile.eeglobal
(+306 files in other folders)
